<?xml version="1.0"?>
<package format="3">
  <name>drone_middleware</name>
  <version>0.1.0</version>
  <description>UDP middleware for drone OctoMap streaming</description>

  <!-- Obligatoire -->
  <maintainer email="dev@example.com">Dev Name</maintainer>
  <license>MIT</license>

  <!-- Outils / dépendances de build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dépendances run-time -->
  <depend>rclcpp</depend>
  <depend>octomap_msgs</depend>
  <depend>asio</depend>
  <depend>octomap</depend>
  <depend>zlib</depend>

  <!-- Indique explicitement le type de build -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
